--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+
+    <color name="black">#000</color>
+    <color name="white">#fff</color>
+
+    <color name="theme_primary">#b2dfdb</color>
+    <color name="theme_primary_dark">#82ada9</color>
+    <color name="theme_primary_light">#e5ffff</color>
+    <color name="on_theme_primary">@color/black</color>
+
+    <color name="theme_accent">#ffd600</color>
+    <color name="theme_accent_dark">#c7a500</color>
+    <color name="theme_accent_light">#ffff52</color>
+    <color name="on_theme_accent">@color/black</color>
+
 </resources>
