--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,7 +10,7 @@
         <item name="colorSecondaryVariant">@color/theme_primary_dark</item>
         <item name="colorOnSecondary">@color/on_theme_primary</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/layer_midground</item>
+        <item name="android:statusBarColor" >@color/layer_midground</item>
         <!-- Customize your theme here. -->
     </style>
 
